# openspace-openhands-evolution

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  ENGINEERING_CHECKLIST.md  GITHUB_SUBMISSION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_GUIDE.md  README.md  TEST_IMPROVEMENT_ROADMAP.md  __init__.py  __main__.py  check_production_ready.py  check_quality.bat  config.example.yaml  config.production.yaml  config_loader.py  docker-compose.yml  error_prediction.py  examples.py  governance.py  install_and_test.bat  knowledge_graph.py  llm_integration.py  mtl_adapter.py  openhands_engine.py  openspace_engine.py  orchestrator.py  production_engine.py  pyproject.toml  pytest.ini  quick_install.bat  requirements.txt  run_tests.bat  setup_production.py  (+5 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
openspace_openhands_evolution/: __main__.py  aaip_protocol.py  execution_engine.py  monitor.py  openhands_engine.py  openspace_engine.py  orchestrator.py  production_engine.py  quick_test.py  setup.py
tests/: __init__.py  conftest.py  test_monitor.py  test_openspace_engine.py  test_orchestrator.py
