[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "self-optimizing-holo-evolution"
version = "1.1.0"
description = "Self-Optimizing Holo Evolution - Production-ready self-evolving AI programming assistant with intelligent strategy engine, knowledge graph, and error prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "OpenSpace Team"}
]
keywords = ["ai-agent", "self-evolving", "self-optimizing", "holo-evolution", "cli", "strategy-engine", "knowledge-graph", "error-prediction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
]

[project.scripts]
sohe = "openspace_openhands_evolution.__main__:run_main"
openspace-evolution = "openspace_openhands_evolution.__main__:run_main"

[project.urls]
Homepage = "https://github.com/yourusername/self-optimizing-holo-evolution"
Documentation = "https://github.com/yourusername/self-optimizing-holo-evolution#readme"
Repository = "https://github.com/yourusername/self-optimizing-holo-evolution.git"
Issues = "https://github.com/yourusername/self-optimizing-holo-evolution/issues"
Changelog = "https://github.com/yourusername/self-optimizing-holo-evolution/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["openspace_openhands_evolution*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
